--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=PEK <kevinperillo98@gmail.com
 sentence=Arduino library for RTC
 paragraph=Arduino library for RTC
 category=Real Time Clock
-url=https://github.com/adafruit/Adafruit_BME280_Library
+url=https://github.com/MootSeeker/DS3231
 architectures=*
